--- a/basics.html
+++ b/basics.html
@@ -154,7 +154,7 @@
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container flex flex-center">
+        <div class="container container-mobile flex flex-center">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
@@ -163,16 +163,20 @@
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram">
-                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
+                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
+                    </a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook">
-                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
+                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
+                    </a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter">
-                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
+                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
+                    </a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to slack">
-                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo"></a>
+                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
+                    </a>
                 </div>
             </div>
         </div>
