--- a/materials.html
+++ b/materials.html
@@ -94,7 +94,7 @@
                     <h2 class="margin-bottom--s">
                         <span>WHICH </span>materials are there?
                     </h2>
-                      <p>
+                    <p>
                         The most common materials used in 3d printing are PLA, ABS and PETG. PLA is a very good base
                         material which can be printed easily due to its low melting point of about 180 degrees celsius.
                         The only drawback is that it isnt very heat resistant. Printed objects must not exceed ambient
@@ -106,7 +106,7 @@
                         which is definetly not for everyone.<br><br>PETG is like inbetween PLA and ABS, it doesnt smell
                         like ABS, but needs to printed at almost the same temperatures. On the other hand it prints very
                         easily and still withstands temperatures of 100 degrees celsius.
-                      </p>
+                    </p>
                 </article>
                 <picture class="flex flex-center">
                     <source media="(max-width: 375px)"
@@ -136,11 +136,13 @@
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
-                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                    <a class="page-button text-white"
+                        href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
                         aria-label="this links to the basics page" rel="noopener" target="_self">
                         BACK
                     </a>
-                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/models.html"
+                    <a class="page-button text-white"
+                        href="https://rebellionwebdesign.github.io/fab-forever/models.html"
                         aria-label="this links to the models page" rel="noopener" target="_self">
                         NEXT
                     </a>
@@ -160,16 +162,20 @@
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram">
-                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
+                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
+                    </a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook">
-                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
+                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
+                    </a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter">
-                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
+                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
+                    </a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to slack">
-                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo"></a>
+                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
+                    </a>
                 </div>
             </div>
         </div>
