--- a/models.html
+++ b/models.html
@@ -61,11 +61,11 @@
     <main>
         <section class="section-half flex flex-center flex-column flex-between background">
             <img class="divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
-              <div class="container container-mobile text-white text-shadow flex flex-center">
-                  <h1><span>MODELS</span> for 3D Printing</h1>
-              </div>
-              <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
-                  alt="the top shape divider">
+            <div class="container container-mobile text-white text-shadow flex flex-center">
+                <h1><span>MODELS</span> for 3D Printing</h1>
+            </div>
+            <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
+                alt="the top shape divider">
         </section>
 
         <!--CONTENT SECTION START-->
@@ -119,7 +119,8 @@
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
-                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                    <a class="page-button text-white"
+                        href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
                         aria-label="this links to the materials page" rel="noopener" target="_self">
                         BACK
                     </a>
@@ -143,19 +144,19 @@
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram">
-                          <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
+                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
                     </a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook">
-                          <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
+                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
                     </a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter">
-                          <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
+                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
                     </a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to slack">
-                          <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
+                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
                     </a>
                 </div>
             </div>
