--- a/response.html
+++ b/response.html
@@ -32,24 +32,24 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">HOME</a>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                                aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                                target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                                target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                                target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">HELP</a>
+                                target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
@@ -60,38 +60,42 @@
 
     <!--CONTENT SECTION START-->
     <main>
-    <section class="section-full flex flex-center section-padding--bottom background-reverse">
-    <div class="container container--mobile flex flex-center  flex-column--mobile text-center">
-        <div class="response rounded box-shadow">
-            <h1><span>CONGRATULATIONS!</span></h1>
-            <p class="margin-top--s">Thanks for your mail, we will come back to you within 48h!</p>
-            <p id="hidden" class="margin-top--s hide">You have also signed up for the newsletter, thanks!</p>
-        </div>
-    </div>
-    </section>
+        <section class="section-full flex flex-center section-padding--bottom background-reverse">
+            <div class="container container--mobile flex flex-center  flex-column--mobile text-center">
+                <div class="response rounded box-shadow">
+                    <h1><span>CONGRATULATIONS!</span></h1>
+                    <p class="margin-top--s">Thanks for your mail, we will come back to you within 48h!</p>
+                    <p id="hidden" class="margin-top--s hide">You have also signed up for the newsletter, thanks!</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!--FOOTER START-->
-    <footer class="flex flex-center fix-bottom">
+    <footer class="flex flex-center">
         <div class="container container-mobile flex flex-center">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-center">
+            <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to instagram"><img class="social-icon"
-                            src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
+                        aria-label="this link sends you to instagram">
+                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
+                    </a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to facebook"><img class="social-icon"
-                            src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
+                        aria-label="this link sends you to facebook">
+                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
+                    </a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to twitter"><img class="social-icon"
-                            src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
+                        aria-label="this link sends you to twitter">
+                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
+                    </a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/svg/slack.svg"
-                            alt="the slack logo"></a>
+                        aria-label="this link sends you to slack">
+                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
+                    </a>
                 </div>
             </div>
         </div>
@@ -102,4 +106,5 @@
 
     <script src="assets/js/mobile-menu.js"></script>
 </body>
+
 </html>
