--- a/index.html
+++ b/index.html
@@ -171,26 +171,29 @@
     </main>
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container flex">
+        <div class="container container-mobile flex flex-center">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
-                <p class="footer-text">An educational static website project</p>
+                <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-center-x-mobile flex-end ">
+            <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram">
-                        <img class="social-icon no-margin" src="assets/img/svg/instagram.svg"
-                            alt="the instagram logo"></a>
+                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
+                    </a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook">
-                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
+                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
+                    </a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter">
-                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
+                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
+                    </a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to slack">
-                          <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo"></a>
+                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
+                    </a>
                 </div>
             </div>
         </div>
