Test active nav script

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     </footer>
     <!--FOOTER END-->
     <script src="assets/js/mobile-menu.js"></script>
+    <script src="assets/js/mobile-menu.js"></script>
 </body>
 
 </html>
