Test active-page script

--- a/help.html
+++ b/help.html
@@ -161,10 +161,9 @@
                 </div>
             </div>
         </div>
-    </footer> <!--FOOTER END-->
-
-
-
+    </footer>
+    <!--FOOTER END-->
+    <script src="assets/js/active-page.js"></script>
     <script src="assets/js/mobile-menu.js"></script>
 </body>
 
