--- a/materials.html
+++ b/materials.html
@@ -12,7 +12,7 @@
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
     <link rel="icon" type="image/x-icon" href="assets/img/svg/favicon.svg">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-
+</head>
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
@@ -181,7 +181,7 @@
         </div>
     </footer>
     <!--FOOTER END-->
-
+    <script src="assets/js/active-page.js"></script>
     <script src="assets/js/mobile-menu.js"></script>
 </body>
 
