--- a/response.html
+++ b/response.html
@@ -101,9 +101,7 @@
         </div>
     </footer>
     <!--FOOTER END-->
-
-
-
+    <script src="assets/js/active-page.js"></script>
     <script src="assets/js/mobile-menu.js"></script>
 </body>
 
