--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
@@ -178,19 +178,19 @@
             </div>
             <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
-                    <a class="nav-item" href="https://www.instagram.com" rel="noopener" target="_blank"
+                    <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram">
                         <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
                     </a>
-                    <a class="nav-item" href="https://www.facebook.com" rel="noopener" target="_blank"
+                    <a href="https://www.facebook.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to facebook">
                         <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
                     </a>
-                    <a class="nav-item" href="https://www.twitter.com" rel="noopener" target="_blank"
+                    <a href="https://www.twitter.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to twitter">
                         <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
                     </a>
-                    <a class="nav-item" href="https://www.slack.com" rel="noopener" target="_blank"
+                    <a href="https://www.slack.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to slack">
                         <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
                     </a>
