--- a/materials.html
+++ b/materials.html
@@ -30,23 +30,23 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
