--- a/basics.html
+++ b/basics.html
@@ -30,24 +30,24 @@
                 <img class="mobile--close" src="assets/img/svg/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
-                        <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
-                        <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
-                        <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
-                        <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
-                        <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
