--- a/response.html
+++ b/response.html
@@ -9,10 +9,10 @@
     <meta name="keywords" content="3d printer, how to 3d print, 3d printing, 3d printing material, material, filament">
     <meta name="author" content="Daniel Stauffer">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <!--<meta http-equiv="refresh" content="5; url=index.html">-->
-    <title>FAB FOREVER | Your 3D printing roundup resource!</title>
+    <meta http-equiv="refresh" content="5; url=index.html">
     <link rel="icon" type="image/x-icon" href="assets/img/svg/favicon.svg">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <title>FAB FOREVER | Your 3D printing roundup resource!</title>
 </head>
 
 <body>
